--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^1.0.6",
+    "@mui/material": "^5.13.3",
     "@next/font": "13.4.4",
+    "@reduxjs/toolkit": "^1.9.5",
     "next": "13.4.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
